# KrakenQuant

./: README.md  pyproject.toml
docs/: README.md  auth.md  rest.md  usage.md  utils.md
examples/: rest_demo.py
krakenquant/: __init__.py
krakenquant/auth/: __init__.py
krakenquant/rest/: __init__.py  client.py  endpoints.py
krakenquant/websocket/: __init__.py
tests/rest/: test_account.py  test_client.py  test_market.py
