[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "krakenquant"
version = "0.1.0"
description = "CU Quants Kraken API client for REST and WebSocket"
authors = [{ name = "CUQUants", email = "cuquants@colorado.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "pydantic>=1.10.0"
]

[project.urls]
Homepage = "https://cuquants.com"
Repository = "https://github.com/cuquants/krakenquant"
